[gd_scene load_steps=15 format=3 uid="uid://ciwesyg4lvt58"]

[ext_resource type="PackedScene" uid="uid://craj4n0hrdpuq" path="res://_MyScenes/menu_scene_test1.tscn" id="1_wh2ms"]
[ext_resource type="Script" uid="uid://c8n1kolbocfi1" path="res://_MyScripts/Main_Menu.gd" id="2_eutqo"]
[ext_resource type="FontFile" uid="uid://d2fntl3rbhwhe" path="res://_MyFonts/Hoover-Variable.woff2" id="2_wg3m6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eutqo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d3tt7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_12jww"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hd6qu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2i88s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fm56a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_thqij"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aifre"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nmhr7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ktdm1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fvxl4"]

[node name="Menu" type="CanvasLayer"]

[node name="Background" type="Node2D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
offset_right = 1280.0
offset_bottom = 720.0

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Camera2D" type="Camera2D" parent="Background/SubViewportContainer/SubViewport"]

[node name="Node2D" parent="." instance=ExtResource("1_wh2ms")]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_eutqo")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_wg3m6")
theme_override_font_sizes/font_size = 62
text = "Overforged: Metal and Flames"

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="StartBtn" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.708, 0.72, 0, 1)
theme_override_colors/font_pressed_color = Color(0.78, 0.338, 0, 1)
theme_override_fonts/font = ExtResource("2_wg3m6")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_eutqo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_d3tt7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_12jww")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hd6qu")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_2i88s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fm56a")
theme_override_styles/hover = SubResource("StyleBoxEmpty_thqij")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_aifre")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nmhr7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ktdm1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fvxl4")
text = "Start Game"

[node name="SettingsBtn" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.708, 0.72, 0, 1)
theme_override_colors/font_pressed_color = Color(0.78, 0.338, 0, 1)
theme_override_fonts/font = ExtResource("2_wg3m6")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_eutqo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_d3tt7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_12jww")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hd6qu")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_2i88s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fm56a")
theme_override_styles/hover = SubResource("StyleBoxEmpty_thqij")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_aifre")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nmhr7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ktdm1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fvxl4")
text = "Settings"

[node name="QuitBtn" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_hover_color = Color(0.708, 0.72, 0, 1)
theme_override_colors/font_pressed_color = Color(0.78, 0.338, 0, 1)
theme_override_fonts/font = ExtResource("2_wg3m6")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_eutqo")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_d3tt7")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_12jww")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hd6qu")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_2i88s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fm56a")
theme_override_styles/hover = SubResource("StyleBoxEmpty_thqij")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_aifre")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_nmhr7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ktdm1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fvxl4")
text = "Quit"
